--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,18 @@
 # Environment Variables Template
 # Copy this file to .env and fill in your actual values
 
-# Google Gemini API Configuration
-GEMINI_API_KEY=your_gemini_api_key_here
+# LLM API Configuration
+# Choose provider: 'openai' or 'gemini'
+LLM_PROVIDER=gemini
+
+# Choose STT provider: 'google web speech' or 'whisper'
+STT_PROVIDER=google_web_speech   # google_web_speech or whisper
+
+# OpenAI API Configuration
+OPENAI_API_KEY=YOUR_API_KEY
+
+# Google Gemini API Configuration  
+GEMINI_API_KEY=YOUR_API_KEY
 
 # Flask Configuration
 FLASK_ENV=development
@@ -12,12 +22,8 @@ FLASK_DEBUG=True
 MAX_AUDIO_DURATION=60
 AUDIO_SAMPLE_RATE=16000
 
-# STT Configuration
-# Options: 'google_web_speech' (free, fast, accurate) or 'whisper' (local, slower)
-STT_PROVIDER=google_web_speech
-WHISPER_MODEL_SIZE=tiny
-
-# TTS Configuration
+# Model Configuration
+WHISPER_MODEL_SIZE=base
 TTS_MODEL_NAME=tts_models/hi/male/tacotron2-DDC
 
 # Face Detection Configuration
