--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,15 @@
 {
   "version": 2,
-  "name": "hindi-ai-assistant",
+  "name": "mitrai-hindi-ai-assistant",
   "builds": [
     {
       "src": "backend/app.py",
       "use": "@vercel/python",
       "config": {
         "maxLambdaSize": "50mb",
-        "runtime": "python3.9"
+        "runtime": "python3.9",
+        "maxDuration": 30,
+        "memory": 1024
       }
     },
     {
@@ -27,12 +29,6 @@
   ],
   "env": {
     "GEMINI_API_KEY": "@gemini_api_key"
-  },
-  "functions": {
-    "backend/app.py": {
-      "maxDuration": 30,
-      "memory": 1024
-    }
   },
   "headers": [
     {
