Fix vercel.json: Replace routes with rewrites
- Changed routes to rewrites to resolve Vercel deployment error
- Removed frontend route as it's handled automatically by static builds
- Kept headers configuration for CORS support
- Now compatible with modern Vercel configuration

--- a/vercel.json
+++ b/vercel.json
@@ -17,14 +17,10 @@
       "use": "@vercel/static"
     }
   ],
-  "routes": [
+  "rewrites": [
     {
-      "src": "/api/(.*)",
-      "dest": "backend/app.py"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "frontend/$1"
+      "source": "/api/(.*)",
+      "destination": "backend/app.py"
     }
   ],
   "env": {
