--- a/vercel.json
+++ b/vercel.json
@@ -1,26 +1,8 @@
 {
-  "version": 2,
-  "name": "mitrai-hindi-ai-assistant",
-  "builds": [
-    {
-      "src": "backend/app.py",
-      "use": "@vercel/python",
-      "config": {
-        "maxLambdaSize": "50mb",
-        "runtime": "python3.9",
-        "maxDuration": 30,
-        "memory": 1024
-      }
-    },
-    {
-      "src": "frontend/**",
-      "use": "@vercel/static"
-    }
-  ],
   "rewrites": [
     {
       "source": "/api/(.*)",
-      "destination": "backend/app.py"
+      "destination": "/backend/app.py"
     }
   ],
   "headers": [
